deploy-gateway-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: node-http-route
spec:
  parentRefs:
    - name: low-service-network
      sectionName: http
  rules:
    - backendRefs:
        - name: node-service
          kind: Service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
